Stylise online assignment word count.

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -646,6 +646,10 @@ body#user-index #longtimenosee {
   font-size:0.8em;
 }
 
+#wordcount {
+  font-size: 0.8em;
+}
+
 /***
  *** Modules: Chat
  ***/
