--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -3187,6 +3187,9 @@ body#user-index .rolesform {
 .modform {
   text-align:center;
 }
+#wordcount {
+  text-align: right;
+}
 
 /***
  *** Modules: Chat
