FIxed wierd blue line in forum posts

--- a/theme/custom_corners/user_styles.css
+++ b/theme/custom_corners/user_styles.css
@@ -905,7 +905,7 @@ table.forumpost div.commands {
   border-top-width: 1px;
   border-bottom-width: 1px;
   border-style: solid none;
-  border-top-color: #0066FF;
+  border-top-color: #F1ECE6;
   border-bottom-color: #F1ECE6;
 }
 table.forumheaderlist {
