--- a/theme/custom_corners/user_styles.css
+++ b/theme/custom_corners/user_styles.css
@@ -35,7 +35,7 @@ div.clearer {
 a:link,
 a:visited {
   color: #116699;
-  text-decoration:none;
+  text-decoration: none;
 }
 a:hover {
   color: #0066FF;
@@ -971,10 +971,23 @@ body#course-user div.tabtree {
 }
 a.dimmed:link,
 a.dimmed:visited {
-  color:#AAAAAA;
+  color: #AAAAAA;
 }
-
 .dimmed_text {
-  color:#AAAAAA;
+  color: #AAAAAA;
 }
-
+#message-index #header,#message-discussion #header,#message-history #header,#message-user #header {
+  display: none;
+}
+#message-index #footer,#message-discussion #footer,#message-history #footer {
+  display: none;
+}
+#message-index #page,#message-user #page,#message-history #page {
+  width: auto;
+}
+#message-user #page {
+  margin: 0;
+}
+#message-user #content {
+  padding: 0;
+}
