Partial fix reopened for MDL-7493, Accessibility: Make sure 'Show hide block' button-link visible under Windows High Contrast.

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1024,3 +1024,7 @@ form.mform .fdescription.required {
   color:#a00;
 }
 
+/* Accessibility: for Windows High Contrast, partial fix MDL-7493. */
+.sideblock .hide-show a {
+  border:1px solid white;
+}
