Fix MDL-7436 Accessibility "Indicate type of resource in the name of the resource"

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -49,8 +49,14 @@ a:link,
 a:visited {
   text-decoration:none;
 }
-
 a:hover {
+  text-decoration: underline;
+}
+
+.img-text a:hover {
+  text-decoration: none;
+}
+.img-text a:hover span {
   text-decoration: underline;
 }
 
