Fixed the HTML editor being too wide for the messaging window  MDL-11242

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2509,6 +2509,10 @@ body#message-send .notifysuccess {
   padding:1px;
 }
 
+body#message-send td.fixeditor {
+  text-align:center;
+}
+
 /***
  *** Notes
  ***/
