Tweak the styles for <pre> tags in help files. These are mostly used for code samples, and they have a grey background and are shown in a different font, so the indent I am getting rid of is not necessarly to make the structure of the document clearn, and usually just means that the code sample does not fit.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -3177,7 +3177,7 @@ body#mod-forum-search .introcontent {
   text-align: right;
 }
 /* Equivalent to 1 and 5 nested blockquotes respectively. */
-#help .indent, #help pre {
+#help .indent {
   margin-left: 40px;
 }
 #help .indent-big {
