--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -4112,7 +4112,7 @@ wikiadminactions {
   text-align: right;
 }
 /* Equivalent to 1 and 5 nested blockquotes respectively. */
-#help .indent, #help pre {
+#help .indent {
   margin-left: 40px;
 }
 #help .indent-big {
