--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2130,6 +2130,30 @@ body#doc-contents ul {
   margin-top: 20px;
 }
 
+.grade-report-grader #overDiv table {
+  margin: 0;	
+  
+}
+
+.grade-report-grader #overDiv table td.feedback {
+	border: 0px;
+}
+.grade-report-grader #overDiv .feedback {
+	background-color: #AABBFF;	
+	color: #000000;
+	font-family: Verdana;
+	font-size: 70%;
+	font-weight: normal;	
+}
+
+.grade-report-grader #overDiv .caption {
+	background-color: #5566CC;
+	color: #CCCCFF;
+	font-family: Arial;
+	font-size: 70%;
+	font-weight: bold;	
+}
+
 .grade-report-grader div.submit {
   margin-top: 20px;
   text-align: center;
@@ -2217,6 +2241,16 @@ body#doc-contents ul {
 .popupfeedback {
   background-color: #FFFFFF;
   border: #000000 1px dashed;
+}
+
+.gradebook_feedback {
+	display: block;	
+	color: yellow;
+	
+}
+
+.gradebook_feedback_caption {
+	font-size: 2em;
 }
 /* scales edit */
 
