MDL-11681 Changed it so current tab no longer is a link to #

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -630,6 +630,10 @@ body#grade-index .grades .header {
  *** Tabs
  ***/
 
+.tabtree a.nolink:hover {
+  text-decoration: none;
+}
+
 
 /***
  *** User
