Miscellaneous fixes for MDL-11543
 - added button to edit current category
 - removed old mini-forms to do the same
 - tidied up various things and CSS as well

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1922,6 +1922,15 @@ body#course-category .addcategory {
   padding: 10px;
 }
 
+body#course-category .buttons .singlebutton {
+  display: inline;
+}
+
+body#course-category .buttons {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 body#course-index #middle-column .editcourse {
   margin-left:auto;
   margin-right:auto;
