Tidied up border around category listing

--- a/theme/custom_corners/user_styles.css
+++ b/theme/custom_corners/user_styles.css
@@ -414,6 +414,8 @@ div.sitetopic {
 }
 div.categorybox {
   border-style: solid;
+  border-width: 1px;
+  border-color: #EEEEEE;
 }
 div.mdescr div.images {
   text-align: center;
