MDL-11717, adding dimmed_text a, to dim links as well

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -152,7 +152,8 @@ table.formtable tbody th {
   background-color:#FFFFFF;
 }
 
-.dimmed_text {
+.dimmed_text,
+.dimmed_text a {
   color:#AAAAAA;
 }
 
