MDL-11718 aggregated grades which depend on hidden grades are now hidden too; cleanup in user report

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -509,6 +509,14 @@ body#grade-index .grades .header {
   font-weight: bold;
 }
 
+.grade-report-user .gradeddate {
+  font-size: 0.7em;
+}
+
+.grade-report-user .catname {
+  font-weight: bold;
+}
+
 /***
  *** Login
  ***/
