MDL-11784 - On the role assign page, list who is assigned the role for roles with only a few assignments.

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -251,6 +251,7 @@ body#admin-index .copyright {
 }
 
 #admin-roles-override .cell.c1,
+#admin-roles-assign .cell.c3,
 #admin-roles-assign .cell.c1 {
   font-size: 0.7em;
 }
